develop - added test diagnostici
